--- a/src/assets/sass/black-dashboard/custom/_variables.scss
+++ b/src/assets/sass/black-dashboard/custom/_variables.scss
@@ -102,7 +102,7 @@ $orange-color:               #f96332 !default;
 $default:       #344675 !default;
 $primary:       #e14eca !default;
 $secondary:     #f4f5f7 !default;
-$success:       #00f2c3 !default;
+$success: #e52424 !default;
 $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
